[gd_scene load_steps=9 format=3 uid="uid://bvawuopyd7eqq"]

[ext_resource type="Texture2D" uid="uid://b5bqlfpvkfvdh" path="res://assets/hex_viewer/window.png" id="1_cktyq"]
[ext_resource type="Script" uid="uid://b5k5r2302vhyn" path="res://hex_viewer/hex_viewer_test.gd" id="2_n4l4c"]
[ext_resource type="Script" uid="uid://dijp07ip3yh7s" path="res://hex_viewer/scroll_manager.gd" id="3_r2rre"]
[ext_resource type="Theme" uid="uid://b518a15p4qy0m" path="res://pc_components.tres" id="4_s5ggu"]
[ext_resource type="Script" uid="uid://c1jqhkjrc15gk" path="res://hex_viewer/text_view.gd" id="5_eftvg"]
[ext_resource type="FontFile" uid="uid://cbrc4x3dvdynj" path="res://Vaticanus-G3yVG.ttf" id="6_4w27c"]
[ext_resource type="Script" uid="uid://ck2m7tv0m2jxu" path="res://hex_viewer/scroll_bar.gd" id="7_iv1p3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cm2t2"]

[node name="hex_viewer" type="NinePatchRect"]
offset_right = 300.0
offset_bottom = 148.0
mouse_filter = 1
texture = ExtResource("1_cktyq")
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
script = ExtResource("2_n4l4c")

[node name="scroll_manager" type="HBoxContainer" parent="."]
layout_mode = 1
offset_right = 300.0
offset_bottom = 150.0
theme_override_constants/separation = -4
script = ExtResource("3_r2rre")

[node name="window" type="TabContainer" parent="scroll_manager"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("4_s5ggu")
current_tab = 0

[node name="new_file" type="VBoxContainer" parent="scroll_manager/window"]
layout_mode = 2
theme_override_constants/separation = 2
metadata/_tab_index = 0

[node name="offset_top" type="Label" parent="scroll_manager/window/new_file"]
layout_mode = 2
theme = ExtResource("4_s5ggu")
text = "Offset    00 01 02 03 04 05 06 07 08 09 0a 0b 0c 0d 0e 0f"

[node name="hex_text" type="Control" parent="scroll_manager/window/new_file"]
custom_minimum_size = Vector2(0, 124)
layout_mode = 2
theme = ExtResource("4_s5ggu")
script = ExtResource("5_eftvg")
font = ExtResource("6_4w27c")

[node name="scroll_bar" type="ColorRect" parent="scroll_manager"]
material = SubResource("ShaderMaterial_cm2t2")
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
color = Color(0.45098, 0.396078, 0.290196, 1)
script = ExtResource("7_iv1p3")

[node name="load" type="Button" parent="."]
layout_mode = 0
offset_left = 277.0
offset_right = 300.0
offset_bottom = 15.0
theme = ExtResource("4_s5ggu")
text = "open"

[connection signal="gui_input" from="scroll_manager" to="scroll_manager" method="_on_gui_input"]
[connection signal="ask_scroll" from="scroll_manager/scroll_bar" to="scroll_manager" method="_on_minimap_ask_scroll"]
[connection signal="gui_input" from="scroll_manager/scroll_bar" to="scroll_manager/scroll_bar" method="_on_gui_input"]
[connection signal="pressed" from="load" to="." method="_on_load_pressed"]
